aca subo la estructura del home amigos

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -6,5 +6,108 @@
   </head>
   <body>
 
-  </body>
+    <header> //aca va el header como habiamos pleandeado, con distintos links
+            //le puse unos links para que podamos incluir el registrate y el log in
+
+            <ol>
+
+              <li><a href="registrate.html">Registrate</a></li>
+              <li id= "inicia sesion"> <a href="log-in.html">Inicia Sesion</a></li>
+              <li id="inicia sesion"><a href="https://accounts.google.com">Inicia Sesion</a></li>
+
+
+            </ol>
+
+            <div class="buscador"> //esto es un buscador que va a estar dentro del header,
+                                  // puede realizar busquedas en la propia home o dentro de la pagina...
+                                  // igual charlemos acerca de esto porque la verdad es que no estoy seguro
+                                  // si vale la pena pner un buscador si la gente no va a tener acceso...
+
+
+              <form  method="post">
+                <label for="busqueda">
+                  <input type="text" name="google" Placeholder= "Busca en Google o escribe una URL" >
+                </label>
+              </form>
+            </div>
+    </header>
+
+    <h1>IKIGAI</h1>
+
+    <section id="section1">
+
+      <div class="descripcion1">
+
+
+
+        <img src="" alt="">//aca iria otra imagen tipo el ojo
+
+        Quienes somos? Nos inspriamos en la cultura japonesa para crear IKIGAI.
+        En un mundo globalizado, encontrar la interseccion entre lo que te amas,
+        en lo que eres bueno, lo que es redituable y lo que el mundo necesita es un desafio como nunca antes visto.
+
+        <br> <br>
+
+
+      </div>
+
+
+
+      <div class="descrpcion2">
+
+        IKIGAI. es la red de ideas creativas mas grande del mundo. Con colaboradores globales,
+        IKIGAI es la plataforma digital patentadora que potenciara tu proyecto y tu inciativa a una escala inimaginable.
+        Registrate ahora mismo y alcanza tu IKIGAI ya!
+
+      </div>
+
+      <div class="registrate">
+        <button type="button" name="button">Registrate</button>
+
+      </div>
+
+      <div class="log-in">
+
+        <button type="button" name="button">Log IN</button>
+
+      </div>
+
+      <div class="contacto">
+
+        Contacto
+
+      </div>
+
+    </section>
+
+
+
+
+
+    <footer>
+
+
+      <ol id=lista1delfoot>
+
+
+      <li><a href="">Publicidad</a></li>
+      <li><a href="">Negocios</a></li>
+      <li><a href="">Acerca De</a></li>
+      <li><a href="">Ayuda</a></li>
+
+      </ol>
+
+      <ol id=lista2delfoot>
+
+
+      <li><a href="">Privacidad</a></li>
+      <li><a href="">Condiciones</a></li>
+      <li id=""><a href="">Referencias</a></li>
+      </ol>
+
+
+    </footer>
+
+
+      </body>
 </html>
