--- a/homepage.html
+++ b/homepage.html
@@ -2,42 +2,70 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/Users/naka/Desktop/ATOM/proyecto DH IKIGAI/homepage.css">
+    <link rel="stylesheet" href="homepage.css">
     <title>IKIGAI Print 1</title>
   </head>
   <body>
 
-    <div class="container">
+    <section class="container">
 
   		<!-- cabecera -->
   		<header class="main-header">
-  			<img src="/Users/naka/Desktop/ATOM/Imagenes/logo.jpg" alt="logotipo" class="logo">
+  				<div class="divheader">
+  				  <button type="button" name="button">Inicia Sesion</button>
+            <button type="button" name="button">Registrate</button>
 
-  			<nav class="main-nav">
-  				<ul id="naveg">
-  					<li><a href="#">REGISTRATE</a></li>
-  					<li><a href="#">INICIA SESIÓN</a></li>
-  				</ul>
-  			</nav>
+
+
+          </div>
+
+
+
+
   		</header>
 
+      <div class="imagen-logo">
+
+    <img src="logo.jpg" alt="logotipo" class="logo">
+        </div>
   		<!-- divs -->
 
   		<section class="start">
-  			<article class="quienes">
-  				<h2>¿Quiénes Somos?</h2>
-  				    <p>Nos inspriamos en la cultura japonesa para crear IKIGAI. En un mundo globalizado, encontrar la interseccion entre lo que amas, en lo que eres bueno, lo que es redituable y lo que el mundo necesita es un desafio como nunca antes visto..</p>
-  			</article>
 
-  			<article class="que">
+        <div class="presentacion">
+          <div id="Bienvenidos">
+            Bienvenidos a
+          </div>
+          <div id="IKIGAI">
+            IKIGAI
+          </div>
+
+          <div class="boton-presentacion">
+            <button type="button" name="button" id="registrate2">Quiero saber mas</button>
+          </div>
+        </div>
+
+  		<section class="contenido">
+
+
+
+  				<div class="preguntas">
+            <h2>¿Quiénes Somos?</h2>
+
+  				</div>
+  				    <p>Nos inspriamos en la cultura japonesa para crear IKIGAI. En un mundo globalizado, encontrar la interseccion entre lo que amas, en lo que eres bueno, lo que es redituable y lo que el mundo necesita es un desafio como nunca antes visto..</p>
+
+                <div class="preguntas">
+
   				<h2>¿Qué somos?</h2>
+        </div>
   				    <p>IKIGAI. es la red de ideas creativas mas grande del mundo. Con colaboradores globales, IKIGAI es la plataforma digital patentadora que potenciara tu proyecto y tu inciativa a una escala inimaginable. Registrate ahora mismo y alcanza tu IKIGAI ya!</p>
   			</article>
 
         <article>
-          <img src="/Users/naka/Desktop/ATOM/Imagenes/IKIGAIEXPLICACIÓN.jpg">
+          <img src="IKIGAIEXPLICACIÓN.jpg">
         </article>
-
+        </section>
   		</section>
 
   		<footer class="main-footer">
@@ -57,7 +85,7 @@
   				<li><a href="#">Referencias</a></li>
   			</ul>
   		</footer>
-  	</div>
+  	</section>
 
 
   </body>
