--- a/HTML/home.html
+++ b/HTML/home.html
@@ -9,6 +9,10 @@
     <header> //aca va el header como habiamos pleandeado, con distintos links
             //le puse unos links para que podamos incluir el registrate y el log in
 
+
+          <p>IKIGAI</p>
+          
+
             <ol>
 
               <li><a href="registrate.html">Registrate</a></li>
@@ -60,6 +64,7 @@
         Registrate ahora mismo y alcanza tu IKIGAI ya!
 
       </div>
+
 
       <div class="registrate">
         <button type="button" name="button">Registrate</button>
