--- a/homepage.html
+++ b/homepage.html
@@ -11,6 +11,12 @@
 
   		<!-- cabecera -->
   		<header class="main-header">
+
+        <p #id="tituloDeArriba">IKIGAI, el mundo de las ideas. </p>
+
+
+
+
   				<div class="divheader">
   				  <button type="button" name="button">Inicia Sesion</button>
             <button type="button" name="button">Registrate</button>
@@ -40,8 +46,10 @@
             IKIGAI
           </div>
 
-          <div class="boton-presentacion">
-            <button type="button" name="button" id="registrate2">Quiero saber mas</button>
+          <div class="boton-presentacion delay">
+            <button type="button" name="button" id="registrate2">
+              <a href="#quienes-somos">Quiero saber mas</a>
+            </button>
           </div>
         </div>
 
@@ -50,7 +58,7 @@
 
 
   				<div class="preguntas">
-            <h2>¿Quiénes Somos?</h2>
+            <h2 id="quienes-somos">¿Quiénes Somos?</h2>
 
   				</div>
   				    <p>Nos inspriamos en la cultura japonesa para crear IKIGAI. En un mundo globalizado, encontrar la interseccion entre lo que amas, en lo que eres bueno, lo que es redituable y lo que el mundo necesita es un desafio como nunca antes visto..</p>
@@ -68,6 +76,26 @@
         </section>
   		</section>
 
+
+          <div class="equipo">
+            <div class="perfil">
+              <img src="logo.jpg" class= "fotoDePerfil">
+              <h2>nombre apellido</h2>
+              <p>desarrollador/trabajo</p>
+
+            </div>
+            <div class="perfil">
+              <img src="logo.jpg" class= "fotoDePerfil">
+              <h2>nombre apellido</h2>
+              <p>desarrollador/trabajo</p>
+
+            </div>
+            <div class="perfil">
+              <img src="logo.jpg" class= "fotoDePerfil">
+              <h2>nombre apellido</h2>
+              <p>desarrollador/trabajo</p>
+
+                </div>
   		<footer class="main-footer">
   			<ul id="footerliquid">
   				<li><a href="#">Publicidad</a></li>
