--- a/HTML/home.html
+++ b/HTML/home.html
@@ -11,7 +11,7 @@
 
 
           <p>IKIGAI</p>
-          
+
 
             <ol>
 
@@ -86,6 +86,8 @@
     </section>
 
 
+      </div>
+    </div>
 
 
 
