--- a/homepage.html
+++ b/homepage.html
@@ -83,20 +83,20 @@
           <div class="equipo">
             <div class="perfil">
               <img src="logo.jpg" class= "fotoDePerfil">
-              <h3>Pedro Sastre</h3>
-              <p>desarrollador/trabajo</p>
+              <h3 class="descripcion">Pedro Sastre</h3>
+              <p class="descripcion">desarrollador/trabajo</p>
 
             </div>
             <div class="perfil">
               <img src="logo.jpg" class= "fotoDePerfil">
-              <h3>Adrián Nakasone</h3>
-              <p>desarrollador/trabajo</p>
+              <h3 class="descripcion">Adrián Nakasone</h3>
+              <p class="descripcion" >desarrollador/trabajo</p>
 
             </div>
             <div class="perfil">
               <img src="logo.jpg" class= "fotoDePerfil">
-              <h3>Tomás David</h3>
-              <p>desarrollador/trabajo</p>
+              <h3 class="descripcion">Tomás David</h3>
+              <p class="descripcion">desarrollador/trabajo</p>
 
                 </div>
 
