--- a/homepage.html
+++ b/homepage.html
@@ -15,17 +15,21 @@
   		<!-- cabecera -->
   		<header class="main-header">
 
-        <p #id="tituloDeArriba">IKIGAI, el mundo de las ideas. </p>
+        <p >IKIGAI
+
+
+
+        </p>
 
 
 
 
-  				<div class="divheader">
+
   				  <button type="button" name="button">Inicia Sesion</button>
             <button type="button" name="button">Registrate</button>
 
 
-
+              <div class="divheader">
           </div>
 
 
