--- a/homepage.html
+++ b/homepage.html
@@ -82,19 +82,19 @@
 
           <div class="equipo">
             <div class="perfil">
-              <img src="logo.jpg" class= "fotoDePerfil">
+              <img src="Pedrito.png" class= "fotoDePerfil">
               <h3 class="descripcion">Pedro Sastre</h3>
-              <p class="descripcion">desarrollador/trabajo</p>
+              <p class="descripcion"> Desarrollador/Estudiante de Publicidad</p>
 
             </div>
             <div class="perfil">
-              <img src="logo.jpg" class= "fotoDePerfil">
+              <img src="Naka.png" class= "fotoDePerfil">
               <h3 class="descripcion">Adrián Nakasone</h3>
-              <p class="descripcion" >desarrollador/trabajo</p>
+              <p class="descripcion" > Desarrollador/trabajo</p>
 
             </div>
             <div class="perfil">
-              <img src="logo.jpg" class= "fotoDePerfil">
+              <img src="Tommy.png" class= "fotoDePerfil">
               <h3 class="descripcion">Tomás David</h3>
               <p class="descripcion">desarrollador/trabajo</p>
 
