--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homepage.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Slabo+27px" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Cabin+Sketch:700|Crete+Round|Poiret+One" rel="stylesheet">
     <title>IKIGAI Print 1</title>
   </head>
@@ -15,17 +16,21 @@
   		<!-- cabecera -->
   		<header class="main-header">
 
-        <p #id="tituloDeArriba">IKIGAI, el mundo de las ideas. </p>
+        <p >IKIGAI
+
+
+
+        </p>
 
 
 
 
-  				<div class="divheader">
-  				  <button type="button" name="button">Inicia Sesion</button>
-            <button type="button" name="button">Registrate</button>
+
+  				  <button type="button" name="button" class="btn btn-primary">Inicia Sesion</button>
+            <button type="button" name="button" class="btn btn-primary">Registrate</button>
 
 
-
+              <div class="divheader">
           </div>
 
 
@@ -82,25 +87,63 @@
 
           <div class="equipo">
             <div class="perfil">
-              <img src="Pedrito.png" class= "fotoDePerfil">
+              <img src="Naka.png" class= "fotoDePerfil">
               <h3 class="descripcion">Pedro Sastre</h3>
-              <p class="descripcion"> Desarrollador/Estudiante de Publicidad</p>
+              <p class="descripcion">desarrollador/trabajo</p>
+              <div class="centersource">
 
+
+              <div class="sources">
+
+                  <ul id= "sources-img">
+                    <li><a href="twitter.com">
+                      <img src="twitter..png" alt="twitter.com">
+                    </a></li>
+                    <li><a href="instagram.com">
+                    <img src="instagram.png" alt="instagram.com"></a></li>
+                    <li><a href="facebook.com"><img src="facebook.png" alt="facebook.com"></a></li>
+                  </ul>
+                    </div>
+              </div>
             </div>
             <div class="perfil">
-              <img src="Naka.png" class= "fotoDePerfil">
+              <img src="Pedrito.png" class= "fotoDePerfil">
               <h3 class="descripcion">Adrián Nakasone</h3>
-              <p class="descripcion" > Desarrollador/trabajo</p>
+              <p class="descripcion" >desarrollador/trabajo</p>
+              <div class="centersource">
+              <div class="sources">
 
+                  <ul id= "sources-img">
+                    <li><a href="twitter.com">
+                      <img src="twitter..png" alt="twitter.com">
+                    </a></li>
+                    <li><a href="instagram.com">
+                    <img src="instagram.png" alt="instagram.com"></a></li>
+                    <li><a href="facebook.com"><img src="facebook.png" alt="facebook.com"></a></li>
+                  </ul>
+              </div>
             </div>
+              </div>
             <div class="perfil">
               <img src="Tommy.png" class= "fotoDePerfil">
               <h3 class="descripcion">Tomás David</h3>
               <p class="descripcion">desarrollador/trabajo</p>
+              <div class="centersource">
+              <div class="sources">
 
+                  <ul id= "sources-img">
+                    <li><a href="twitter.com">
+                      <img src="twitter..png" alt="twitter.com">
+                    </a></li>
+                    <li><a href="instagram.com">
+                    <img src="instagram.png" alt="instagram.com"></a></li>
+                    <li><a href="facebook.com"><img src="facebook.png" alt="facebook.com"></a></li>
+                  </ul>
+              </div>
+                </div>
                 </div>
 
-              </div>s
+              </div>
   		<footer class="main-footer">
   			<ul id="footerliquid">
   				<li><a href="#">Publicidad</a></li>
