--- a/homepage.html
+++ b/homepage.html
@@ -25,8 +25,8 @@
 
 
 
-  				  <button type="button" name="button">Inicia Sesion</button>
-            <button type="button" name="button">Registrate</button>
+  				  <button type="button"  name="button">Registrate</button>
+            <button type="button" id="inicia-sesion" name="button">Iniciar Sesion</button>
 
 
               <div class="divheader">
@@ -36,6 +36,12 @@
 
 
   		</header>
+
+      <section>
+
+        <div class="atr">
+
+
 
       <div class="imagen-logo">
 
@@ -52,13 +58,17 @@
           <div id="IKIGAI">
             IKIGAI
           </div>
-
+            <div class="texto-presentacion">
+                <p>epteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
           <div class="boton-presentacion delay">
             <button type="button" name="button" id="registrate2">
               <a href="#quienes-somos">Quiero saber mas</a>
             </button>
           </div>
         </div>
+        </div>
+
 
   		<section class="contenido">
 
@@ -72,7 +82,7 @@
 
                 <div class="preguntas">
 
-  				<h2>¿Qué somos?</h2>
+  				<h2 id='que-somos'>¿Qué somos?</h2>
         </div>
   				    <p id="que" >IKIGAI. es la red de ideas creativas mas grande del mundo. Con colaboradores globales, IKIGAI es la plataforma digital patentadora que potenciara tu proyecto y tu inciativa a una escala inimaginable. Registrate ahora mismo y alcanza tu IKIGAI ya!</p>
   			</article>
@@ -83,7 +93,7 @@
         </section>
   		</section>
 
-
+        <section id='team'>
           <div class="equipo">
             <div class="perfil">
               <img src="Naka.png" class= "fotoDePerfil">
@@ -104,7 +114,8 @@
 
                 </div>
 
-              </div>s
+              </div>
+          </section>
   		<footer class="main-footer">
   			<ul id="footerliquid">
   				<li><a href="#">Publicidad</a></li>
