--- a/HTML/registrate1.html
+++ b/HTML/registrate1.html
@@ -2,67 +2,97 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/registrate.css">
     <title></title>
   </head>
   <body>
+    <header>
+      IKIGAI
+    </header>
+
+    <div class="imagen-logo">
+
+      <img src="../logo.jpg" alt="">
+
+    </div>
+
+
+    <section class="formulario">
+
+      <div class="registrate">
+
+        Registrate
+      </div>
+
+
+      <div class="cuerpo">
 
 
 
     <form action="gracias.html" method="GET">
+
+<div class="campo">
       <label for="nombre">Nombre:</label>
-      <input id="nombre" type="text" name="nombre1" required >
-
-      <br><br>
+      <input id="nombre" type="text" name="nombre1" required placeholder="Nombre" >
+</div>
+<div class="campo">
       <label for="apellido">Apellido:</label>
-      <input id="apellido" type="text" name="apellido2" required>
+      <input id="apellido" type="text" name="apellido2" required placeholder="Apellido">
 
-      <br><br>
-
+</div>
+<div class="campo">
       <label for="date">Fecha de nacimiento:</label>
-      <input id="date" type="text" name="" value="">
-
-      <br><br>
+      <input id="date" type="text" name="" value="" placeholder="dd/mm/aaaa">
 
 
+</div>
+<div class="campo">
       <label for="email">E-mail</label>
-      <input type="email" name="email" id="email" value="">
+      <input type="email" name="email" id="email" value="" placeholder="ejemplo@outlook.com">
 
-      <br><br>
+</div>
 
-      Pais:
-      <select id="pais" class="" name="pais">
-        <option value="AR">Argentina</option>
-        <option value="CO">Colombia</option>
-        <option value="MX">Mexico</option>
-      </select>
 
-      <br><br>
+
+<div class="campo">
       <label for="password">Contraseña</label>
-      <input type="password" name="password" id="password" value="">
+      <input type="password" name="password" id="password" value="" placeholder="Contraseña">
 
-      <br><br>
-
+</div>
+<div class="campo">
       <label for="password">Repetir contraseña</label>
-      <input type="password" name="password" id="password" value="">
+      <input type="password" name="password" id="password" value="" placeholder="Repetir contraseña">
 
-      <br><br>
-
-
-
-      <br><br>
-      <div class="g-recaptcha" data-sitekey="6LcKrC4UAAAAAPaSy5SRSlgA5_AlMV6BDP8OTwNq"></div>
+</div>
 
 
-      <br><br>
+      <div class="enviar">
+
+
+
+
+
       <button type="submit">
         Enviar
       </button>
       <button type="reset">
         Reiniciar
+
       </button>
+      </div>
     </form>
-    <!--js-->
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    </div>
+
+
+  </section>
+
+  <div class="mandale">
+
+    Ya tenes una cuenta? <a href="login">Inicia Sesion!</a>
+
+  </div>
+
 
   </body>
 </html>
